; ModuleID = '/home/carl/AnghaBench/linux/net/packet/extr_diag.c_pdiag_put_info.c'
source_filename = "/home/carl/AnghaBench/linux/net/packet/extr_diag.c_pdiag_put_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packet_sock = type { i64, i64, i64, i64, i64, i32, i32, i32, i32, i32 }
%struct.sk_buff = type { i32 }
%struct.packet_diag_info = type { i32, i32, i32, i32, i32, i32 }

@PDI_RUNNING = common dso_local global i32 0, align 4
@PDI_AUXDATA = common dso_local global i32 0, align 4
@PDI_ORIGDEV = common dso_local global i32 0, align 4
@PDI_VNETHDR = common dso_local global i32 0, align 4
@PDI_LOSS = common dso_local global i32 0, align 4
@PACKET_DIAG_INFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.packet_sock*, %struct.sk_buff*)* @pdiag_put_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pdiag_put_info(%struct.packet_sock* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.packet_sock*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.packet_diag_info, align 4
  store %struct.packet_sock* %0, %struct.packet_sock** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %6 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %7 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %6, i32 0, i32 9
  %8 = load i32, i32* %7, align 8
  %9 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 5
  store i32 %8, i32* %9, align 4
  %10 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %11 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %10, i32 0, i32 8
  %12 = load i32, i32* %11, align 4
  %13 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 4
  store i32 %12, i32* %13, align 4
  %14 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %15 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %14, i32 0, i32 7
  %16 = load i32, i32* %15, align 8
  %17 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 3
  store i32 %16, i32* %17, align 4
  %18 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %19 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %18, i32 0, i32 6
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 2
  store i32 %20, i32* %21, align 4
  %22 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %23 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %22, i32 0, i32 5
  %24 = load i32, i32* %23, align 8
  %25 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 1
  store i32 %24, i32* %25, align 4
  %26 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  store i32 0, i32* %26, align 4
  %27 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %28 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %27, i32 0, i32 4
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %2
  %32 = load i32, i32* @PDI_RUNNING, align 4
  %33 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = or i32 %34, %32
  store i32 %35, i32* %33, align 4
  br label %36

36:                                               ; preds = %31, %2
  %37 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %38 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %37, i32 0, i32 3
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %46

41:                                               ; preds = %36
  %42 = load i32, i32* @PDI_AUXDATA, align 4
  %43 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = or i32 %44, %42
  store i32 %45, i32* %43, align 4
  br label %46

46:                                               ; preds = %41, %36
  %47 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %48 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %47, i32 0, i32 2
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %56

51:                                               ; preds = %46
  %52 = load i32, i32* @PDI_ORIGDEV, align 4
  %53 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = or i32 %54, %52
  store i32 %55, i32* %53, align 4
  br label %56

56:                                               ; preds = %51, %46
  %57 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %58 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %57, i32 0, i32 1
  %59 = load i64, i64* %58, align 8
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %66

61:                                               ; preds = %56
  %62 = load i32, i32* @PDI_VNETHDR, align 4
  %63 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = or i32 %64, %62
  store i32 %65, i32* %63, align 4
  br label %66

66:                                               ; preds = %61, %56
  %67 = load %struct.packet_sock*, %struct.packet_sock** %3, align 8
  %68 = getelementptr inbounds %struct.packet_sock, %struct.packet_sock* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %76

71:                                               ; preds = %66
  %72 = load i32, i32* @PDI_LOSS, align 4
  %73 = getelementptr inbounds %struct.packet_diag_info, %struct.packet_diag_info* %5, i32 0, i32 0
  %74 = load i32, i32* %73, align 4
  %75 = or i32 %74, %72
  store i32 %75, i32* %73, align 4
  br label %76

76:                                               ; preds = %71, %66
  %77 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %78 = load i32, i32* @PACKET_DIAG_INFO, align 4
  %79 = call i32 @nla_put(%struct.sk_buff* %77, i32 %78, i32 24, %struct.packet_diag_info* %5)
  ret i32 %79
}

declare dso_local i32 @nla_put(%struct.sk_buff*, i32, i32, %struct.packet_diag_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
